# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  ast_builder.py  diff_generator.py  file_parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: main.py
src/: __init__.py  file_parser.py  gendiff.py  utils.py
tests/: test_gendiff.py
tests/fixtures/: diff.py
tests/fixtures/test_result/: __init__.py  json.py  plain.py  stylish.py
